[gd_scene load_steps=6 format=3 uid="uid://bsousn3bw4sgu"]

[ext_resource type="Script" uid="uid://m2t04ac1u0bt" path="res://!tools/game_editor/screens/editor_screen/features/biomes_tool/game_editor__biomes_tool.gd" id="1_5c64g"]
[ext_resource type="Script" uid="uid://vd4iu2yqafcl" path="res://!tools/game_editor/screens/editor_screen/features/biomes_tool/internal/visible_biome_rects.gd" id="2_72hsh"]
[ext_resource type="PackedScene" uid="uid://eahcnuvi8twy" path="res://!tools/game_editor/screens/editor_screen/features/biomes_tool/internal/biomes_list.tscn" id="2_a7f53"]
[ext_resource type="Theme" uid="uid://b7thgsf2s74gg" path="res://assets/themes/for_dev_tools.tres" id="2_vdwv0"]
[ext_resource type="Script" uid="uid://b6qccaqg26me0" path="res://!tools/game_editor/screens/editor_screen/features/biomes_tool/internal/paint_view.gd" id="4_muf2j"]

[node name="BiomesTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_vdwv0")
script = ExtResource("1_5c64g")

[node name="VisibleBiomeRects" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_72hsh")

[node name="PaintView" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_vdwv0")
script = ExtResource("4_muf2j")

[node name="MapHoveredCatcher" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_vdwv0")

[node name="HoveredTilePos" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 7.0
offset_top = 690.0
offset_right = 203.0
offset_bottom = 713.0
theme = ExtResource("2_vdwv0")
text = "unhovered"

[node name="Container" type="Control" parent="."]
z_index = 10
z_as_relative = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -304.0
offset_top = -675.0
grow_horizontal = 0
grow_vertical = 0

[node name="BiomesList" parent="Container" instance=ExtResource("2_a7f53")]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
offset_left = 0.0
offset_top = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectedBiomeTools" type="HBoxContainer" parent="."]
z_index = 10
layout_mode = 0
offset_left = 17.0
offset_right = 1285.0
offset_bottom = 45.0
mouse_filter = 0
theme = ExtResource("2_vdwv0")

[node name="PaintRectButton" type="Button" parent="SelectedBiomeTools"]
unique_name_in_owner = true
z_index = 10
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
toggle_mode = true
text = "Paint Rect"

[node name="RemoveRect" type="Button" parent="SelectedBiomeTools"]
modulate = Color(0.596783, 0.172031, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Remove Rect"

[connection signal="mouse_entered" from="MapHoveredCatcher" to="." method="_on_map_hovered_catcher_mouse_entered"]
[connection signal="mouse_exited" from="MapHoveredCatcher" to="." method="_on_map_hovered_catcher_mouse_exited"]
[connection signal="toggled" from="SelectedBiomeTools/PaintRectButton" to="." method="_on_paint_rect_toggled"]
